k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildfire-api
  labels:
    app: wildfire-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wildfire-api
  template:
    metadata:
      labels:
        app: wildfire-api
    spec:
      containers:
        - name: wildfire-api
          image: ghcr.io/plemvan/wildfireprediction:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
# wildfire api deployment
