k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wildfire-api
  labels:
    app: wildfire-api
spec:
  type: ClusterIP
  selector:
    app: wildfire-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
